# Stop-Start-Recording-Atem-Mini

./: CMakeLists.txt  Main.cpp  Main.out  README.md  RecordingControl.cpp  RecordingControl.h  SwitcherConnection.cpp  SwitcherConnection.h  atemswitcher_wrapper.py  config.ini  connect-start-stop-example.py  installed_modules.txt  recording_control.py  recording_module.cpp  switcher.py  switcher_bindings.cpp
blackmagic_api/mac_os/include/: BMDSwitcherAPI.h  BMDSwitcherAPIDispatch.cpp
blackmagic_api/mac_os/include/Legacy/: BMDSwitcherAPIDispatch_v8_10.cpp  BMDSwitcherAPI_v8_10.h  BMDSwitcherAPI_v8_4.h  BMDSwitcherAPI_v8_5_3.h  BMDSwitcherAPI_v8_6_4.h  BMDSwitcherAPI_v9_0_1.h
modules/: connectToAtem.py  startAndStopRecording.py
